# flow

./: .gitignore  meson.build
src/: controlpath.v  datapath.v  flow.v  fpga_top.v
src/components/: bit_updater.v  hex_decoder.v  register_selector.v  register_updater.v  vga_interface.v
src/controlpath/: alu_control_word_decoder.v  alu_control_word_encoder.v  alu_instruction_decoder.v  control_word_selector.v  jump_instruction_decoder.v  null_instruction_decoder.v  unary_instruction_decoder.v
src/datapath/: abs_float_multiplier.v  alu.v  float16_adder.v  float16_multiplier.v  memory.v  signflag_generator.v  sorted_float_adder.v  zeroflag_generator.v
src/megafunctions/: memory_ram.qip  memory_ram.v  memory_ram_bb.v  stack_ram.qip  stack_ram.v  stack_ram_bb.v
src/programs/: hex_printer.mif  letter_printer.mif  loader.hex  loader.mif  number_printer.mif  random_printer.mif  register_printer.mif  vga_display.mif
test/: fpga_loader_tb.v
test/controlpath/: controlpath_tb.v  jump_instruction_tb.v  null_instruction_tb.v
test/datapath/: alu_tb.v  datapath_tb.v  flag_tb.v  memory_tb.v
test/fpga_top/: fpga_top_tb.hv
